fix(theme): fix colors of seed image manifest and node toggle buttons for dark mode

--- a/projects/developer/src/app/configuration/job-types/create.component.scss
+++ b/projects/developer/src/app/configuration/job-types/create.component.scss
@@ -39,4 +39,17 @@
 
         }
     }
+
+    ::ng-deep {
+        .CodeMirror {
+            color: var(--main-text);
+        }
+        .seed-jobs .results .result-header {
+            color: var(--black);
+        }
+        .seed-jobs .job-details .code pre {
+            color: var(--main-text);
+            background: var(--pre-background) !important;
+        }
+    }
 }
